nginx (1.25.3+mod.2-1ppa1~1hn1DebRelDistrib) DebRelCodename; urgency=medium

  * Update module sources

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Mon, 11 Dec 2023 19:49:10 +0900

nginx (1.25.3+mod.1-1ppa1~ubuntu22.04) jammy; urgency=medium

  * New upstream version 1.25.3
  * Add module sources
  * openresty/echo-nginx-module 7fddb5b082c6382dd15b6d8ddbf2ccb2a490aafd
  * openresty/headers-more-nginx-module 607d1b1f32abc3de5a26deeeb827de19c1e842b9
  * openresty/lua-nginx-module 5ae767d504179fe1d2ca848fb65c321e22b082b3
  * openresty/lua-upstream-nginx-module dba0beaaeb0eaed758af3f4dc0c0464adeaedb1c
  * openresty/memc-nginx-module c507601211b971fc8b22ed2ce642c80b154791f6
  * openresty/redis2-nginx-module 96d6638183b502ce7a55f83972c26b911795c4ea
  * openresty/set-misc-nginx-module 3b93d893aabbab3f30f78f0a90dd10c3de279f8d
  * openresty/srcache-nginx-module be22ac0dcd9245aadcaca3220da96a0c1a0285a7
  * openresty/stream-lua-nginx-module 04bed1696e12fb6695b18495d23958e50e99323c
  * openresty/lua-resty-balancer 1cd4363c0a239afe4765ec607dcfbbb4e5900eea
  * openresty/lua-resty-core f18d56f0d6c51854d01bad54e6a9d9795da66566
  * openresty/lua-resty-dns 273db4f348d4676f554c5319a902e7b836153192
  * openresty/lua-resty-lock 88a5886956af899e4277c6cdcd0d5b8f00a5093d
  * openresty/lua-resty-limit-traffic e80969b79afcc94856b095fe6163ace21387c6b6
  * openresty/lua-resty-lrucache 52f5d00403c8b7aa8a4d4f3779681976b10a18c1
  * openresty/lua-resty-memcached f38de8bccb48f4dc0f683054efd68dc6d07468f6
  * openresty/lua-resty-memcached-shdict 32374a1a286506cf4cf9c18a8c1bf01bd1554c21
  * openresty/lua-resty-mysql da0c1e86f85514941ce6297ab7a46dcf17d90f52
  * openresty/lua-resty-redis bbbc47baf35e5a47539456371795b5e6ed67ef75
  * openresty/lua-resty-shdict-simple 755293f865175d718cf3a57261b4db5da64cc48b
  * openresty/lua-resty-shell 9e39efb8224d4d2b8297cf277d173b278addd963
  * openresty/lua-resty-signal 7834226610e2df36f8e69641c4ca0d5ea75a9535