@@ -151,3 +151,9 @@
 [submodule "modules/njs"]
 	path = modules/njs
 	url = https://github.com/nginx/njs
+[submodule "modules/nginx-var-limit-conn-module"]
+	path = modules/nginx-var-limit-conn-module
+	url = https://github.com/hnakamur/nginx-var-limit-conn-module
+[submodule "modules/nginx-var-limit-req-module"]
+	path = modules/nginx-var-limit-req-module
+	url = https://github.com/hnakamur/nginx-var-limit-req-module
