@@ -52,6 +52,8 @@ config.env.%:
 	cp -Pa $(CURDIR)/set-misc-nginx-module $(BUILDDIR_$*)/
 	cp -Pa $(CURDIR)/srcache-nginx-module $(BUILDDIR_$*)/
 	cp -Pa $(CURDIR)/lua-resty-jump-consistent-hash $(BUILDDIR_$*)/
+	cp -Pa $(CURDIR)/nginx-var-limit-conn-module $(BUILDDIR_$*)/
+	cp -Pa $(CURDIR)/nginx-var-limit-req-module $(BUILDDIR_$*)/
 	cp -Pa $(CURDIR)/njs $(BUILDDIR_$*)/
 	touch $@
 
@@ -118,6 +120,8 @@ config.status.nginx: config.env.nginx
 		--add-dynamic-module=./set-misc-nginx-module \
 		--add-dynamic-module=./srcache-nginx-module \
 		--add-dynamic-module=./njs/nginx \
+		--add-dynamic-module=./nginx-var-limit-conn-module \
+		--add-dynamic-module=./nginx-var-limit-req-module \
 		--without-pcre2 \
 		--with-cc-opt="$(CFLAGS)" \
 		--with-ld-opt="$(LDFLAGS)"
@@ -187,6 +191,8 @@ config.status.nginx_debug: config.env.nginx_debug
 		--add-dynamic-module=./set-misc-nginx-module \
 		--add-dynamic-module=./srcache-nginx-module \
 		--add-dynamic-module=./njs/nginx \
+		--add-dynamic-module=./nginx-var-limit-conn-module \
+		--add-dynamic-module=./nginx-var-limit-req-module \
 		--without-pcre2 \
 		--with-cc-opt="$(CFLAGS)" \
 		--with-ld-opt="$(LDFLAGS)" \
